Yet another update

--- a/assets/css/shortcodes.css
+++ b/assets/css/shortcodes.css
@@ -13,7 +13,7 @@
 }
 
 #facts.wprt-section {
-    background: url(../img/bg-section-facts.jpg) no-repeat center center;
+    background: url(../img/Stone/fscreen/IMG_2100.jpg) no-repeat center center;
 }
 
 #promotion.wprt-section {
